--- a/brewpi-script/tiltHydrometer/settings.ini
+++ b/brewpi-script/tiltHydrometer/settings.ini
@@ -10,7 +10,7 @@ DeviceID: 0
 AveragePeriodSeconds: 300
 
 ;Use a median filter over the average period. The window will be applied multiple times.
-;Generally the brewometer generates about 1.3 values every second. So for 300 seconds, you will end up with a set of 360-380 values.
+;Generally the tilt hydrometer generates about 1.3 values every second. So for 300 seconds, you will end up with a set of 360-380 values.
 ;Setting the window to < 360, will then give you a moving average like function.
 ;Setting the window to >380 will disable this and use a median filter across the whole set. This means that changes in temp/gravity will take ~2.5 mins to be observed.
 MedianWindowVals: 10000
