--- a/tiltHydrometer-test/tiltHydrometer/settings.ini
+++ b/tiltHydrometer-test/tiltHydrometer/settings.ini
@@ -14,3 +14,7 @@ AveragePeriodSeconds: 300
 ;Setting the window to < 360, will then give you a moving average like function.
 ;Setting the window to >380 will disable this and use a median filter across the whole set. This means that changes in temp/gravity will take ~2.5 mins to be observed.
 MedianWindowVals: 10000
+
+
+;Debug setting - Turn on (True) to get more verbose logging.
+Debug: False
